@@ -7,7 +7,7 @@ Author: Jan Dittberner <jandd@debian.org>
 +++ b/setup.py
 @@ -5,10 +5,6 @@
  # Change docs/sphinx/conf.py too!
- VERSION = '3.3'
+ VERSION = '3.4'
  
 -# Bootstrap installation of Distribute
 -import distribute_setup
@@ -16,17 +16,18 @@ Author: Jan Dittberner <jandd@debian.org>
  from setuptools import setup, find_packages
  
  from distutils.util import convert_path
-@@ -139,9 +135,6 @@
+@@ -139,10 +135,6 @@
  
      platforms = ['Any'],
  
--    scripts = ['virtualenvwrapper.sh', 
+-    scripts = ['virtualenvwrapper.sh',
+-               'virtualenvwrapper_lazy.sh',
 -               ],
 -
      provides=['virtualenvwrapper',
                'virtualenvwrapper.user_scripts',
                'virtualenvwrapper.project',
-@@ -150,14 +143,7 @@
+@@ -151,14 +143,7 @@
  
      namespace_packages = [ 'virtualenvwrapper' ],
      packages = find_packages(),
